Asignado training loop correcto a nb05b

--- a/nb05b_train_rcan-scale3_loss-computed-on-lr-and-hr.ipynb
+++ b/nb05b_train_rcan-scale3_loss-computed-on-lr-and-hr.ipynb
@@ -171,7 +171,7 @@
     "NUM_IMAGE_CHANNELS = TRAINING_COLOR_MODE\n",
     "SCALE = TRAINING_SCALE\n",
     "NORMALIZATION = False\n",
-    "TRAINING_LOOP = training_loops.Train_Loss_LR\n",
+    "TRAINING_LOOP = training_loops.Train_Loss_LR_and_HR\n",
     "\n",
     "model = RCAN.get_RCAN(NUM_RESIDUAL_GROUPS,\n",
     "                        NUM_RESIDUAL_BLOCKS,\n",
